--- a/priv/alog.config
+++ b/priv/alog.config
@@ -1,28 +1,30 @@
 [
- {alog, [
-         {enabled_loggers, [alog_tty]},
-         {install_error_logger_handler, true},
+	{alog, [
+		{enabled_loggers, [alog_tty]},
+        {install_error_logger_handler, true},
 
-         {flows, [
-                  {{mod, ['_']},{'=<', debug}, [alog_tty]},
-                  {{mod, [alog_examples]}, {'=<', debug},[alog_tty]}
-                 ]},
-
-         {alog_tty, []},
-         {alog_scribe, [{addr, "localhost"},
-			{port, 1463},
-			{strict_read, false},
-			{strict_write, false},
-			{framed, true}]},
-	 {alog_syslog, [{ident, "alogger"},
-		        {logopt, [cons, perror, pid]},
-			{facility, user}]},
-         {alog_disk_log, [{name, alog_disk_log},
-                          {file, "alogger.log"},
-                          {format, external}]}
+        {flows, [
+        	{{mod, ['_']},{'=<', debug}, [alog_tty]},
+            {{mod, [alog_examples]}, {'=<', debug},[alog_tty]}
         ]},
 
- {sasl, [
-         {sasl_error_logger, false}
-        ]}
+        {alog_tty, []},
+        {alog_scribe, [{addr, "localhost"},
+			        	{port, 1463},
+						{strict_read, false},
+						{strict_write, false},
+						{framed, true}]},
+	 	{alog_syslog, [{ident, "alogger"},
+						{logopt, [cons, perror, pid]},
+						{facility, user}]},
+        {alog_disk_log, [{name, alog_disk_log},
+                          {file, "alogger.log"},
+                          {format, external}]}
+        {alog_zerolog, [{addr, ["tcp://localhost:2121"
+        						, "tcp://localhost:2122"]}]}
+    ]},
+
+	{sasl, [
+    	{sasl_error_logger, false}
+    ]}
 ].
