--- a/priv/alog.config
+++ b/priv/alog.config
@@ -25,7 +25,7 @@
 						{facility, user}]},
         {alog_disk_log, [{name, alog_disk_log},
                           {file, "alogger.log"},
-                          {format, external}]}
+                          {format, external}]},
         {alog_zerolog, [{addr, ["tcp://localhost:2121"
         						, "tcp://localhost:2122"]}]}
     ]},
